--- a/Hello_world.html
+++ b/Hello_world.html
@@ -4,14 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Hello World</title>
 </head>
 <style>
     h1 {
-        font: bolder; 80px; 
+        font-style: bolder; 
+        font-size: 80px; 
+        text-align: center;
     }
 </style>
 <body>
     <h1>Hello World!</h1>
+    <script>
+        window.alert ("Hello to my world!");
+        window.alert (document.title);
+        document.write ("Welome");
+        alert (document.lastModified);
+        document.write (document.lastModified);
+    </script>
 </body>
 </html>
