--- a/Hello_world.html
+++ b/Hello_world.html
@@ -11,6 +11,7 @@
         font-style: bolder; 
         font-size: 80px; 
         text-align: center;
+        color: red;
     }
 </style>
 <body>
