--- a/Hello_world.html
+++ b/Hello_world.html
@@ -11,7 +11,7 @@
         font-style: bolder; 
         font-size: 80px; 
         text-align: center;
-        color: red;
+        color: rgb(187, 18, 187);
     }
 </style>
 <body>
