--- a/Hello_world.html
+++ b/Hello_world.html
@@ -5,6 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Hello World</title>
+    <script>
+        window.alert ("Hello to my world!");
+        window.alert (document.title);
+        document.write ("Welome");
+        alert (document.lastModified);
+        document.write (document.lastModified);
+        function sayhello () {
+            alert ("Hello World!");
+        }
+    </script>
 </head>
 <style>
     h1 {
@@ -13,15 +23,10 @@
         text-align: center;
         color: rgb(187, 18, 187);
     }
+
 </style>
 <body>
     <h1>Hello World!</h1>
-    <script>
-        window.alert ("Hello to my world!");
-        window.alert (document.title);
-        document.write ("Welome");
-        alert (document.lastModified);
-        document.write (document.lastModified);
-    </script>
+    <input type="button" value="Say Hello" onclick="sayhello ()" />
 </body>
 </html>
